--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /** =============================================================================
 
 ** ********************* INDICE:
-** - RIGA 7: :root, debug, resets, components
+** - RIGA 7: :root, switch theme, debug, resets, components
 ** - RIGA 149: macrostruttura
 ** - RIGA 190: sidebar
 ** - RIGA 320: main
@@ -331,6 +331,7 @@ main .header {
     z-index: 1000;
     box-shadow: 0 2px 10px hsla(0, 0%, 0%, 0.5);
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
 }
 
 /* posizione bottone header */
